--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,9 +4,10 @@ nav {
   text-decoration: none;
   font-size: 1.2em;
   font-weight:800;
-  background: lightsalmon;
+  background: slategray;
   height: 10vh;
   display:flex;
   justify-content:space-around;
   align-items:center;
 }
+
