--- a/views/register.slim
+++ b/views/register.slim
@@ -2,4 +2,7 @@ form action="users/new" method="POST"
     input type="text" name="username" placeholder="Enter username"
     input type="password" name="password" placeholder="enter password"
     input type="password" name="password_confirm" placeholder="enter password again"
+    select name="usertype" /
+    option value="1" user
+    option value="2" admin 
     input type="submit" value="Registrera ny användare"/
