--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,6 +9,7 @@ html lang="en"
     nav
       a href="/" Register
       a href="/showlogin" Login
+      a href="/albums/new" Ny rulle
     h1 Welcome to IMBD!
 
     == yield
