--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,7 +9,7 @@ html lang="en"
     nav
       a href="/" Register
       a href="/showlogin" Login
-      a href="/albums/new" Ny rulle
+      a href="/movies" Alla Filmer
     h1 Welcome to IMBD!
 
     == yield
