--- a/views/register.slim
+++ b/views/register.slim
@@ -5,4 +5,5 @@ form action="users/new" method="POST"
     select name="usertype" /
     option value="1" user
     option value="2" admin 
+    input type="password" name="admin_key" placeholder="Admin-Nyckel"
     input type="submit" value="Registrera ny användare"/
