--- a/views/todos/new.slim
+++ b/views/todos/new.slim
@@ -1,4 +1,7 @@
 form action="/movies/new" method="post"
     input type="text" name="title" placeholder="Filmtitel"/
     input type="text" name="studio_name" placeholder="Filmstudio"
+    input type="text" name="genre1" placeholder="Genre 1"
+    input type="text" name="genre2" placeholder="Genre 2"
+    input type="text" name="genre3" placeholder="Genre 3"
     input type="submit" value="Lägg till film"/
