--- a/views/todos/index.slim
+++ b/views/todos/index.slim
@@ -1,6 +1,7 @@
 section id="movies"
 - if is_admin 
-  a href="/movies/new" Lägg till Spel
+  a href="/movies/new" Lägg till Film
+a href="/comments" Dina kommentarer
 ol
     - movies.each do |movie|
       li 
