--- a/views/register.slim
+++ b/views/register.slim
@@ -1,4 +1,4 @@
-form action="users/new" method="POST"
+form action="users" method="POST"
     input type="text" name="username" placeholder="Enter username"
     input type="password" name="password" placeholder="enter password"
     input type="password" name="password_confirm" placeholder="enter password again"
