--- a/views/todos/new.slim
+++ b/views/todos/new.slim
@@ -1,4 +1,4 @@
-form action="/movies/new" method="post"
+form action="/movies" method="post"
     input type="text" name="title" placeholder="Filmtitel"/
     input type="text" name="studio_name" placeholder="Filmstudio"
     input type="text" name="genre1" placeholder="Genre 1"
