--- a/views/todos/show.slim
+++ b/views/todos/show.slim
@@ -6,3 +6,14 @@ p Genre:
 ul
     - tags.each do |tag|
         li #{tag["name"]}
+
+a href="/comments/#{movie['id']}/new" Kommentera
+h3 Kommentarer:
+
+ul
+    - comments.each do |comment|
+        li
+            p #{comment["comment"]}
+            a href="/comments/#{comment['id']}/edit" Uppdatera 
+            form action="/comments/#{comment['id']}/delete" method="post"
+                input type="submit" value="Delete"/ 
